# UNIK

1year/Курсач/: ИКБО-02-21_НикитинаВА_КР_ООП.docx  ИКБО-02-21_ХитровНС_КР_ООП.docx
1year/ОП_Лера/: Отчет_ИКБО-02-21_НикитинаВА.docx  Практика_ИКБО-02-21_НикитинаВА.rar  Презентация_ИКБО-02-21_НикитинаВА.pptx
1year/ОП_Я/: ~$ITROV_OP (1).docx  ~$ХИТРОВ.docx  Отчет_ИКБО-02-21_ХитровНС.docx  Презентация_ИКБО-02-21_ХитровНС.pptx  Разработка серверной части игры.pptx  ХИТРОВ.docx  доклад.docx
1year/Практики инфа/: 10.docx  11.docx  5Практика.docx  6Практика.docx  7Практика.docx  8Практика.docx  9Практика.docx  Otchet_12Laba.docx  trig.circ
1year/СиАОД/: Pr1.docx  Pr2.docx  Pr3.docx  Pr4.docx  Pr5.docx
2year/: ~$актическая работа №2.docx
2year/Docker/: НиАСПО_ИКБО-20-21_ХитровНС_ПР1.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР10.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР2.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР3.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР4.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР5.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР6.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР7.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР8.docx  НиАСПО_ИКБО-20-21_ХитровНС_ПР9.docx
2year/Java/: Khitov_Nikita_IKBO-20-21.docx  Документ Microsoft Word (2).docx
2year/VirtualBox/: ИКБО-20-21_ХитровНС_Практики1-3_ВиртуальнаяМашина.docx
2year/python/: hand4_1.py  hand4_2.py  hand4_3.py  hand5_1G.py
3year/5сем/РСЧИР/Пр11-12/pr11/rschir11/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
3year/5сем/РСЧИР/Пр11-12/pr11/rschir11/fio/: urls.py  views.py
3year/5сем/РСЧИР/Пр11-12/pr11/rschir11/rschir11/: asgi.py  settings.py  urls.py  wsgi.py
3year/5сем/РСЧИР/Пр11-12/pr11/rschir11/static/rest_framework/docs/js/: highlight.pack.js
(+625 files in other folders)
