[tool.poetry]
name = "timeslot"
version = "0.1.0"
description = "X5 Timeslot Project Backend"
authors = ["rom.sinitsyn <rom.sinitsyn@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
ruff = "^0.0.283"
pre-commit = "^3.3.3"
drf-spectacular = { extras = ["sidecar"], version = "^0.26.4" }
psycopg2-binary = "^2.9.7"
ecs-logging = "^2.0.2"
celery = "^5.3.1"
gunicorn = "^21.2.0"
pytest-django = "^4.5.2"
sentry-sdk = "^1.31.0"

[[tool.poetry.source]]
name = "private"
url = "https://art.x5.ru/artifactory/api/pypi/pypi/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "F", # pyflakes
    "W", # pycodestyle
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "Q", # flake8-quotes
    "C90", # mccabe
    "A", # flake8-builtins
]
ignore = []

fixable = ["ALL"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 5

[tool.ruff.flake8-quotes]
inline-quotes="single"